# minilibtools

./: README.md
subprocess/: CMakeLists.txt  main.c  run.sh  subprocess.c  subprocess.h
subprocess/app/: CMakeLists.txt  main.c
subprocess/include/: subprocess.h
subprocess/src/: subprocess.c
